Implement basic registration template skeleton. Note: For now here used some gimmick services for app running purposes